# cookiecutter-modern-pypackage

./: cookiecutter.json
docs/: prompts.rst
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  pyproject.toml
