{% set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}
[project]
name = "{{ cookiecutter.project_name }}"
dynamic = ["version", "readme"]
description = "{{ cookiecutter.project_short_description }}"
authors = [
	{'author' = "{{ cookiecutter.full_name }}", 'email' = "{{ cookiecutter.email }}"}
]
{% if cookiecutter.open_source_license == "Not open source" %}
license = "{{ cookiecutter.open_source_license }}"
{% endif %}
keywords = ["{{ cookiecutter.project_name }}"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    {% if cookiecutter.open_source_license in license_classifiers %}
    "{{ license_classifiers[cookiecutter.open_source_license] }}",
    {% endif %}
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
	"pre-commit>=2.15.0",
	"invoke>=1.6.0",
	"flake8>=3.9.2",
	"flakehell>=0.9.0",
	"flake8-builtins>=1.5.3",
	"flake8-blind-except>=0.2.0",
	"flake8-logging-format>=0.6.0",
	"flake8-bugbear>=21.9.2",
	"flake8-annotations>=2.6.2",
	"flake8-docstrings>=1.6.0",
	"flake8-bandit>=2.1.2",
	"darglint>=1.8.0",
	"isort>=5.9.3",
	"black>=21.9b0",
	"safety>=1.10.3",
	"recommonmark>=0.7.1",
	"commitizen>=2.34.0",
	"pytest>=6.2.5",
	"xdoctest>=0.15.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = "{{ cookiecutter.project_slug }}.__version__"}

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.project_slug }}"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if settings.DEBUG:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == __main__:"
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.flakehell]
format = "grouped"
max_line_length = 99
show_source = true
docstring-convention = "google"
extended_default_ignore = []

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
mccabe = ["+*"]
"flake8-*" = ["+*"]
darglint = ["+*"]

[tool.flakehell.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["invoke", "nox"]

[tool.black]
line-length = 99
target-version = ["py37"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
